# A-Multilingual-local-RAG-chatbot-using-OLLAMA

./: .gitignore  RAG_Bill.ipynb  RAG_Bill_Refined.ipynb  README.md  app.py  main.py  pyproject.toml  requirements.txt
